# double-buffer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: DoubleBuffer.hpp
tests/: DoubleBufferBenchmark.cpp  DoubleBufferTests.cpp
